...
        tableViewSetUp()
    }
    
    private func navigationBarSetUp() {
        self.navigationController?.setNavigationBarHidden(false, animated: true)
        self.navigationItem.setHidesBackButton(true, animated: true)
        navigationItem.title = "Posts"
    }
    
    private func logoutbuttonSetUp() {
        let logoutBarButtonItem = UIBarButtonItem(title: "Logout", style: .plain, target: self, action: #selector(logoutUser))
        self.navigationItem.rightBarButtonItem  = logoutBarButtonItem
    }
    
    @objc func logoutUser(){
        UserDefaults.standard.removeObject(forKey: Constants.APIKEY)
        imageCache.removeAllObjects()
...
