...
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f47-Ot-BX8">
                                <rect key="frame" x="93" y="309.5" width="189.5" height="48"/>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Login As Guest">
                                    <fontDescription key="titleFontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="26"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="onPressLogin:" destination="xiP-qO-1Xy" eventType="touchUpInside" id="Kza-b1-Kfm"/>
                                </connections>
                            </button>
...
